// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "remote-build/remote-build";

package remote_build;


// Service handling requests from clients
service BuildService {
  rpc SendRequest (ClientRequest) returns (ServerResponse);
}

// Service assigning tasks to workers
service WorkService {
  rpc AssignTask (TaskRequest) returns (WorkerResponse);

}

// The request message from a client
message ClientRequest {
  string command = 1;
  string file = 2;
  string fileContent = 3;
}


// The server's response message
message ServerResponse {
  string ServerResponse = 1;
}

// The task sent from the server to a worker
message TaskRequest {
  string command = 1;
  string file = 2;
  string fileContent = 3;
}

// The response from a worker
message WorkerResponse {
  string completeTask = 1;
}


